# html-extractor

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/html-extractor/: Cargo.toml
crates/html-extractor-napi/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
crates/html-extractor-napi/__test__/: binding.test.mjs
crates/html-extractor-napi/src/: lib.rs
crates/html-extractor/benches/: throughput.rs
crates/html-extractor/examples/: extract_cli.rs  extract_one.rs
crates/html-extractor/src/: classifier.rs  clean.rs  fallback.rs  lib.rs  metadata.rs  parser.rs  render.rs  scoring.rs  tree.rs  types.rs
crates/html-extractor/tests/: golden.rs  integration_basic.rs
crates/html-extractor/tests/fixtures/articles/: apnews_001.expected.md  apnews_001.html  apnews_001.meta.json  bbc_001.expected.md  bbc_001.html  bbc_001.meta.json  ft_001.expected.md  ft_001.html  ft_001.meta.json  guardian_001.expected.md  guardian_001.html  guardian_001.meta.json  guardian_002.expected.md  guardian_002.html  guardian_002.meta.json  hn_blog_001.expected.md  hn_blog_001.html  hn_blog_001.meta.json  le_monde_001.expected.md  le_monde_001.html  le_monde_001.meta.json  longread_001.expected.md  longread_001.html  longread_001.meta.json  medium_001.expected.md  medium_001.html  medium_001.meta.json  medium_002.expected.md  medium_002.html  medium_002.meta.json  news_typical.html  nyt_001.expected.md  nyt_001.html  nyt_001.meta.json  opinion_001.expected.md  opinion_001.html  opinion_001.meta.json  reuters_001.expected.md  reuters_001.html  reuters_001.meta.json  (+7 more)
crates/html-extractor/tests/fixtures/collections/: home_001.html  home_002.html  home_002.meta.json  home_003.html  home_004.html
crates/html-extractor/tests/fixtures/docs/: django_001.expected.md  django_001.html  django_001.meta.json  graphql_001.expected.md  graphql_001.html  graphql_001.meta.json  mdn_001.expected.md  mdn_001.html  mdn_001.meta.json  python_001.expected.md  python_001.html  python_001.meta.json  react_001.expected.md  react_001.html  react_001.meta.json  rust_book_001.expected.md  rust_book_001.html  rust_book_001.meta.json
crates/html-extractor/tests/fixtures/edge_cases/: all_table_layout.expected.md  all_table_layout.html  (+17 more)
(+62 files in other folders)
