[workspace]
resolver = "2"
members = [
    "crates/html-extractor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/firecrawl/html-extractor"

[workspace.dependencies]
html-extractor = { path = "crates/html-extractor", version = "0.1.0" }

# Shared third-party deps
html5ever = "0.27"
markup5ever_rcdom = "0.3"
markup5ever = "0.12"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
